fixed gulp sass and slim and added navbar and some sample variables

--- a/app/index.html
+++ b/app/index.html
@@ -1,23 +1,33 @@
 <!DOCTYPE html>
 <html ng-app="cleberIo">
   <head>
-    <link rel="stylesheet" href="assets/styles/reset.css" media="screen" title="no title" charset="utf-8">
-    <link rel="stylesheet" href="assets/styles/application.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="./assets/styles/css/reset.css" media="screen" title="no title" charset="utf-8">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="./assets/styles/css/application.css" media="screen" title="no title" charset="utf-8">
     <link rel="shortcut icon" href="css/img/justFishBlackLogo.png"/>
     <meta charset="utf-8">
     <title>cleber.io</title>
   </head>
   <body>
 
+    <navbar-directive></navbar-directive>
     <div ui-view></div>
-
+    <!-- external scripts -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.2/angular.min.js" charset="utf-8"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.js" charset="utf-8"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.11.2/moment.min.js" charset="utf-8"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-moment/0.10.3/angular-moment.min.js" charset="utf-8"></script>
+    <!-- app -->
     <script src="app.js" charset="utf-8"></script>
+    <!-- controllers -->
     <script src="./components/home/homeCtrl.js" charset="utf-8"></script>
+    <!-- directives -->
+    <script src="./components/shared/navbarDirective.js" charset="utf-8"></script>
+
 
   </body>
 </html>
